# voltor-flip-ui

./: .bumpversion.cfg  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/main/python/voltorb_flip_ui/: game_widget.py  main.py
src/main/resources/base/: classic.css
