[tool.poetry]
name = "voltorb-flip-ui"
version = "0.0.0"
description = "A PyQt UI for my voltorb-flip"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.14"
voltorb-flip = {version = "^0.1.0-alpha.0", allows-prereleases = true}

[tool.poetry.dev-dependencies]
fbs = "^0.8.4"
macholib = "^1.14"
PyInstaller = "^3.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
