[tool.poetry]
name = "voltorb-flip-ui"
version = "0.1.0"
description = "A PyQt UI for my voltorb-flip"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyQt5 = "^5.14"
voltorb-flip = {version = "^0.1.0-alpha.0", allows-prereleases = true}
pip = "^20.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
fbs = "^0.8.4"
isort = "^4.3"
macholib = "^1.14"
PyInstaller = "3.5"
pylint = "^2.4"
pytest = "^5.2"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
